Fix ToC header alignment - left-align instead of center

--- a/asciidoc-style.css
+++ b/asciidoc-style.css
@@ -81,6 +81,7 @@ body {
   color: var(--primary-color);
   margin-bottom: 15px;
   border: none;
+  text-align: left;
 }
 
 #toc ul {
